--- a/ArduinoMotionAquisitionFirmware/ArduinoMotionAquisitionFirmware/ArduinoMotionAquisitionFirmware.vcxproj.filters
+++ b/ArduinoMotionAquisitionFirmware/ArduinoMotionAquisitionFirmware/ArduinoMotionAquisitionFirmware.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="ArduinoMotionAquisitionFirmware.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.ArduinoMotionAquisitionFirmware.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
